--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,8 @@
 [env:huzzah]
 platform = espressif8266
 board = huzzah
+;upload_port = sonos-ir.local
+;upload_flags = --port 8266 --auth=your_ota_password
 framework = arduino
 lib_deps = 
 	IRremoteESP8266	
