--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,4 @@ board = huzzah
 ;upload_flags = --port 8266 --auth=your_ota_password
 framework = arduino
 lib_deps = 
-	IRremoteESP8266	
+	IRremoteESP8266@2.7.9
