--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,8 @@
 [env:huzzah]
 platform = espressif8266
 board = huzzah
-;upload_port = sonos-ir.local
-;upload_flags = --port 8266 --auth=your_ota_password
+upload_port = sonos-ir.local
+upload_flags = -i sonos-ir.local -p 8266 -a turnitupto11
 framework = arduino
 lib_deps = 
 	IRremoteESP8266@2.7.9
